--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WizarD</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -22,8 +22,8 @@
                <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary"  style="height: 60px; background-color: rgb(56, 54, 54);">
                     <div class="container-fluid ">
                            <a class="navbar-brand" id="Logo" href="#">                            
-                               <img src="../images/logo_W.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-start m-0 p-0 ">
-                               <img src="../images/W_letra.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-start m-0 p-0 ">
+                               <img src="../logo_W.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-start m-0 p-0 ">
+                               <img src="../W_letra.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-start m-0 p-0 ">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
                             <span class="navbar-toggler-icon" style="width: 20px;" ></span>
