--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WizarD</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -22,8 +22,8 @@
                <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary"  style="height: 60px; background-color: rgb(56, 54, 54);">
                     <div class="container-fluid ">
                            <a class="navbar-brand" id="Logo" href="#">                            
-                               <img src="../images/logo_W.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-start m-0 p-0 ">
-                               <img src="../images/W_letra.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-start m-0 p-0 ">
+                               <img src="images/logo_W.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-start m-0 p-0 ">
+                               <img src="images/W_letra.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-start m-0 p-0 ">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
                             <span class="navbar-toggler-icon" style="width: 20px;" ></span>
@@ -92,7 +92,7 @@
       <div class="row reveal fade-bottom justify-content-center">
           <div class="col-auto ">
             <div class="card" style="width: 20em;">
-              <img src="../images/juan.jpg" class="card-img-top" alt="carl">
+              <img src="images/juan.jpg" class="card-img-top" alt="carl">
                  <div class="card-body" style="height: 150px;">
                   <h5 class="card-title">Juan </h5>
                   <p class="card-text fs-7">Especilista en puesta en escena. Sus montajes estan a la altura de los especatulos internacionales.</p>
@@ -102,7 +102,7 @@
           </div>
       <div class="col-auto" id="contnos">
           <div class="card" style="width: 20rem;">
-              <img src="../images/leona.jpg" class="card-img-top" alt="bill">
+              <img src="images/leona.jpg" class="card-img-top" alt="bill">
               <div class="card-body" style="height: 150px;">
                   <h5 class="card-title">Leonor</h5>
                   <p class="card-text fs-7">Especialista en gestion y organizacion de eventos. se encarga de coordinar y organizar todos los equipos para que todo salga segun lo planeado.</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="col-auto">
           <div class="card" style="width: 19.5rem;">
-              <img src="../images/pedro.jpg" class="card-img-top" alt="ada">
+              <img src="images/pedro.jpg" class="card-img-top" alt="ada">
               <div class="card-body" style="height: 150px;">
                   <h5 class="card-title">Pedro</h5>
                   <p class="card-text fs-7">Especilista en arte visual. La mente creativa que dara vida a cualquier tipo de puesta en escena.</p>    
@@ -139,22 +139,22 @@
        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="../images/dj-frente-al-escenario-muchas-luces-humo-ia-generativa_634053-3151.avif" class="d-block w-100" alt="...">
+            <img src="images/dj-frente-al-escenario-muchas-luces-humo-ia-generativa_634053-3151.avif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
             <img src="../images/5_PHOENIX_LED+Spectra+Light+Dancers_Circus+Arts+Center+Vienna_Austria.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="../images/16676927180_92403aed69_c.jpg" class="d-block w-100" alt="...">
+            <img src="images/16676927180_92403aed69_c.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="../images/Mejores-asientos-para-teatro.jpg" class="d-block w-100" alt="...">
+            <img src="images/Mejores-asientos-para-teatro.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="../images/stage-2223130_1280.jpg" class="d-block w-100" alt="...">
+            <img src="images/stage-2223130_1280.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="/images/javiera_mena.jpg" class="d-block w-100" alt="...">
+            <img src="images/javiera_mena.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
