--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
       <div class="col-auto" id="contnos">
           <div class="card" style="width: 20rem;">
-              <img src="images/leona.jpg" class="card-img-top" alt="bill">
+              <img src="images/Leona.jpg" class="card-img-top" alt="bill">
               <div class="card-body" style="height: 150px;">
                   <h5 class="card-title">Leonor</h5>
                   <p class="card-text fs-7">Especialista en gestion y organizacion de eventos. se encarga de coordinar y organizar todos los equipos para que todo salga segun lo planeado.</p>
