--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <img src="images/5_PHOENIX_LED+Spectra+Light+Dancers_Circus+Arts+Center+Vienna_Austria.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
-            <img src="../images/16676927180_92403aed69_c.jpg" class="d-block w-100" alt="...">
+            <img src="images/16676927180_92403aed69_c.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item"data-bs-interval="3000">
             <img src="images/Mejores-asientos-para-teatro.jpg" class="d-block w-100" alt="...">
