--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <br id="Contacto">
   <section class="section" id="Contactos" style="background-image: linear-gradient(rgba(158, 55, 55, 0.842),rgba(255, 255, 255, 0.5))">
     <div class="conteiner" id="conteinerForm">
-      <form action="post" id="form1">
+      <form action="" id="form1">
         <div class="row text-center" id="contacto">
           <p class="text-center mb-2 mt-3"></p>
           <H2 class="or">Contacto</H2>
@@ -181,10 +181,10 @@
         </div> 
         <div class="row justify-content-center">
           <div class="col-3">
-            <input type="text" class="form-control" placeholder="nombre" aria-label="nombre" required>
+            <input type="text" class="form-control" placeholder="nombre" aria-label="nombre" required id="nombre">
           </div>
           <div class="col-3">
-          <input type="text" inputmode="numeric" class="form-control" placeholder="Numero de Telefono" aria-label="TEL" required>
+          <input type="email"  class="form-control" placeholder="email" aria-label="email" required id="email">
           </div>
         </div>
         <p></p>
