--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                               <a class="nav-link active text-white" aria-current="page" href="#containerMain">Home</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link text-white" href="#nosotros">Que hacemos</a>
+                              <a class="nav-link text-white" href="#nosotros">Qué hacemos</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link text-white" href="#NuestroEquipo">Nuestro Equipo</a>
@@ -43,7 +43,7 @@
                               <a class="nav-link text-white" href="#clientes">Clientes</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link text-white" href="#shows">shows</a>
+                              <a class="nav-link text-white" href="#shows">Shows</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link text-white" href="#Contacto">Contacto</a>
@@ -374,7 +374,7 @@
 <footer>
   <div class="row justify-content-center align-middle" style="background-color: rgb(0, 0, 0);">
     <div class="col-3 text-light text-wrap mt-3 ms-5" style="width: 6rem;">
-      <a class="ade" href="#">Perguntas</a> 
+      <a class="ade" href="#">Preguntas</a> 
     </div>
     <div class="col-3 text-light text-wrap mt-3 ms-5" style="width: 6rem;">
       <a class="ade" href="#">Contáctanos</a> 
